# Mirage

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  fingerprint-drift.yml  mobile.yml  release.yml
bindings/: README.md
bindings/android/: MirageVpn.kt  MirageVpnService.kt
bindings/ios/: PacketTunnelProvider.swift  mirage.h
crates/adversary/: Cargo.toml
crates/adversary/examples/: flow_auc.rs
crates/adversary/src/: adaptive_routing.rs  cell_length.rs  cohort_dos.rs  flow_classifier.rs  ja3.rs  lib.rs  probe_replay.rs  quic_initial.rs  randomness.rs  tarpit.rs  token_batch.rs  version_leak.rs
crates/adversary/tests/: quic_live_fingerprint.rs  run_all.rs
crates/bridge/: Cargo.toml
crates/bridge/examples/: cohort_cooperation_demo.rs  cohort_gossip_demo.rs  mirage_demo.rs  multi_entry_demo.rs
crates/bridge/src/: admin.rs  circuit_executor.rs  claim_log.rs  cohort_distress.rs  cohort_membership.rs  cohort_replay.rs  leak_detector.rs  lib.rs  main.rs  metrics.rs  next_hop_link.rs  next_hop_pool.rs  probe_defense.rs  rate_limit.rs  session_task.rs  stream_dispatcher.rs
crates/bridge/src/admin_ui/: index.html
crates/bridge/tests/: circuit_relay_e2e.rs  relay_token_verify_e2e.rs  session_task_e2e.rs  socks5_e2e.rs  stream_dispatch_e2e.rs  transport_e2e.rs  two_bridge_relay_e2e.rs
crates/circuit/: Cargo.toml
crates/circuit/src/: bridge_circuit.rs  builder.rs  cell.rs  circuit.rs  extend.rs  keys.rs  lib.rs  onion.rs  split_exit.rs  stream.rs
crates/client/: Cargo.toml
crates/client-gui/: Cargo.toml  build.rs
crates/client-gui/src/: main.rs
crates/client-gui/ui/: app.slint
crates/client/src/: ech.rs  lib.rs  local_socks.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  process_hardening.rs  replay_nonce.rs  secure_file.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: dvs.rs  hybrid_kem.rs  lib.rs
crates/discovery/: Cargo.toml
crates/discovery-dht/: Cargo.toml
crates/discovery-dht/src/: bep44.rs  blinded.rs  lib.rs  mainline_client.rs
crates/discovery-dns-txt/: Cargo.toml
crates/discovery-dns-txt/src/: channel.rs  chunk.rs  hickory.rs  lib.rs  resolver.rs
crates/discovery-nostr/: Cargo.toml
crates/discovery-nostr/src/: error.rs  event.rs  lib.rs  relay.rs  signing.rs  wrap.rs
crates/discovery-nostr/tests/: fuzz_parsers.rs
crates/discovery/src/: blockchain_channel.rs  channel.rs  claim.rs  claim_client.rs  cohort.rs  cohort_client.rs  cohort_gossip.rs  cohort_gossip_tcp.rs  cohort_persist.rs  derive.rs  error.rs  invite.rs  lib.rs  mesh.rs  pipeline.rs  pool.rs  ratchet.rs  refresh.rs  refresh_client.rs  replay.rs  replay_log.rs  rotalog.rs  router.rs  seal.rs  token.rs  token_fs.rs  wire.rs
crates/discovery/tests/: fuzz_parsers.rs  vectors.rs
crates/migration/: Cargo.toml
crates/migration/src/: challenge.rs  cid.rs  lib.rs  policy.rs  state.rs
crates/mobile-ffi/: Cargo.toml
crates/mobile-ffi/src/: android.rs  cabi.rs  lib.rs
crates/mux/: Cargo.toml
crates/mux/src/: conn.rs  frame.rs  lib.rs  policy.rs  state.rs  stream.rs  target.rs
crates/mux/tests/: carrier_e2e.rs
crates/onion/: Cargo.toml
crates/onion/proptest-regressions/: address.txt
crates/onion/src/: address.rs  descriptor.rs  introduce.rs  lib.rs  publish.rs  seal.rs
crates/quic-obfs/: Cargo.toml
crates/quic-obfs/src/: gecko.rs  h3_probe.rs  lib.rs
crates/router/: Cargo.toml
crates/router/src/: class.rs  classifier.rs  lib.rs  policy.rs  pool.rs  profile.rs  selector.rs
crates/router/tests/: integration.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cell_io.rs  driver.rs  lib.rs  multi_entry.rs  pool.rs  transport_runtime.rs
crates/runtime/tests/: extend_finish_e2e.rs
crates/session/: Cargo.toml
crates/session/src/: cover.rs  error.rs  frames.rs  handshake.rs  lib.rs  padding.rs  stream.rs  tunnel.rs  udp_frame.rs  wire.rs
crates/session/tests/: fuzz_framer.proptest-regressions  fuzz_framer.rs  fuzz_parsers.rs  http_through_mirage.rs  three_hop_demo.rs  tunnel_tcp_loopback.rs
crates/socks5/: Cargo.toml
crates/socks5/src/: copy.rs  lib.rs  server.rs  udp_dgram.rs
crates/spec/: Cargo.toml
crates/spec/src/: lib.rs
crates/time/: Cargo.toml
crates/time/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport-dnstt/: Cargo.toml
crates/transport-dnstt/src/: arq.rs  dns.rs  lib.rs  stream.rs  transport.rs
crates/transport-doh/: Cargo.toml
crates/transport-doh/src/: lib.rs
crates/transport-hysteria2/: Cargo.toml
crates/transport-hysteria2/src/: brutal.rs  lib.rs
crates/transport-masque/: Cargo.toml
crates/transport-masque/src/: h3.rs  lib.rs
crates/transport-meek/: Cargo.toml
crates/transport-meek/src/: lib.rs
crates/transport-mux/: Cargo.toml
crates/transport-mux/src/: lib.rs  mux.rs  prefix.rs
crates/transport-mux/tests/: mux_integration.rs
crates/transport-obfs/: Cargo.toml
crates/transport-obfs/src/: lib.rs
crates/transport-pad/: Cargo.toml
crates/transport-pad/src/: lib.rs
crates/transport-reality/: Cargo.toml
crates/transport-reality/examples/: dump_ja3.rs
crates/transport-reality/src/: carrier.rs  cover_probe.rs  error.rs  lib.rs  paced.rs  pacer.rs  (+12 more)
crates/transport-shadowsocks/: Cargo.toml
crates/transport-vless/: Cargo.toml
crates/transport-webrtc/: Cargo.toml
crates/transport-ws/: Cargo.toml
crates/tun/: Cargo.toml
docs/: README.md  building-android.md  building-ios.md  building.md  configuration.md  features.md  getting-started.md  install.md  internals.md  operators.md  security-model.md
packaging/linux/: mirage.desktop
packaging/macos/: Info.plist
packaging/windows/: mirage.wxs
scripts/: build-release.sh  mirage-ephemeral.sh  mirage-jail.sh  mirage-killswitch.sh
scripts/podman-e2e/: Containerfile  failover.sh  run.sh  udp_socks_test.py  webrtc.sh
supply-chain/: README.md  audits.toml  config.toml
tools/cover-sources/: README.md  mirage-cover-recorder.service
(+24 files in other folders)
