[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/spec",
    "crates/crypto",
    "crates/time",
    "crates/session",
    "crates/discovery",
    "crates/discovery-nostr",
    "crates/discovery-dht",
    "crates/discovery-dns-txt",
    "crates/circuit",
    "crates/core",
    "crates/migration",
    "crates/mux",
    "crates/onion",
    "crates/router",
    "crates/runtime",
    "crates/transport",
    "crates/transport-masque",
    "crates/quic-obfs",
    "crates/transport-obfs",
    "crates/transport-reality",
    "crates/transport-webrtc",
    "crates/transport-shadowsocks",
    "crates/transport-ws",
    "crates/transport-meek",
    "crates/transport-hysteria2",
    "crates/transport-vless",
    "crates/transport-doh",
    "crates/transport-dnstt",
    "crates/transport-pad",
    "crates/transport-mux",
    "crates/bridge",
    "crates/client",
    "crates/socks5",
    "crates/tun",
    "crates/adversary",
    "crates/client-gui",
    "crates/mobile-ffi",
]

[workspace.package]
version = "0.1.3-alpha.1"
# MSRV. Must match the pin in rust-toolchain.toml (channel = "1.86"). The true
# floor is 1.86: edition-2024 transitive deps need 1.85, and several pinned deps
# (icu 2.x, idna_adapter, time 0.3.45) declare rust-version 1.86. All 37 crates
# inherit this via `rust-version.workspace = true`.
edition = "2021"
rust-version = "1.86"
license = "AGPL-3.0-or-later"
authors = ["Mirage contributors"]

# Workspace-level lints. Every crate inherits via `[lints] workspace = true`.
# Under the "lives at stake" threat model, warnings in security-critical code
# are technical debt that must not ship. Deny by default; annotate specific
# exceptions inline with rationale.
[workspace.lints.rust]
# Explicit priority on lint groups to avoid conflicts with clippy group
# definitions (see rust-lang/cargo#12918).
unsafe_code = "forbid"
missing_docs = "warn"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Correctness: any code that triggers these is almost certainly buggy. This is
# the valuable, KEPT gate - it catches real bugs and is denied on every push.
all = { level = "deny", priority = -1 }
# `pedantic` was "warn" but is downgraded to "allow" as of the 1.86 toolchain
# pin. On 1.86 + CI's `--all-targets` it fires ~130 times, ALL confirmed to be
# style/cosmetic or test/example/demo noise (float-eq asserts, `let..else` vs
# `match`, item placement, wide handshake fn signatures, wildcard arms that
# future-proof enums) - zero real bugs. A "lives at stake" CI gate that is red
# on every push for cosmetics is worse than useless: it trains people to ignore
# it and buries the `all`-group correctness signal. Correctness stays denied
# above; re-enable `pedantic` (or specific members) per-crate once the false-
# positive burden on that module has been paid down. The specific allows below
# are retained so a future per-crate `pedantic = "warn"` stays quiet on them.
pedantic = { level = "allow", priority = -1 }
# Allow the subset of `pedantic` that's noise for our style:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
# Pure-STYLE members of `pedantic` that the 1.86 clippy update newly (and
# heavily) flags but that are preference, not correctness - allowed so CI is not
# red on style churn. The *fixable* pedantic lints (needless_pass_by_value,
# unnecessary_wraps, type_complexity, match_same_arms, return_self_not_must_use,
# unused_async, ...) stay on and are fixed in the code.
manual_let_else = "allow"       # `let..else` vs `match` is a style call
items_after_statements = "allow" # nested item placement, cosmetic
uninlined_format_args = "allow"  # `{}`+arg vs inline `{x}` - cosmetic
unreadable_literal = "allow"     # digit-group separators - cosmetic
too_many_arguments = "allow"     # some wire/handshake fns are inherently wide
match_wildcard_for_single_variants = "allow" # `_` future-proofs added variants
float_cmp = "allow"             # exact-equality float asserts in tests
# Specific security-adjacent lints. `unwrap_used`/`expect_used` were meant for
# NON-TEST code, but `[workspace.lints]` cannot scope to non-test and CI lints
# `--all-targets`, so they flagged ~1300 `.unwrap()` calls in TEST code (the
# documented "unwrap-in-tests" gate gotcha). Allowed rather than sprinkle
# `#![cfg_attr(test, allow(...))]` across ~38 crates; production unwrap discipline
# is maintained by review, and the correctness group (`all = deny`, kept) still
# catches the genuinely-buggy patterns. Re-enable per-crate on any module where
# you want the stricter posture.
unwrap_used = "allow"
expect_used = "allow"
panic_in_result_fn = "warn"
# `indexing_slicing`/`integer_division`/`float_arithmetic` were also "warn", but
# they are downgraded to "allow" as of the 1.86 toolchain pin. Rationale (honest
# tradeoff, not a silent relaxation): the 1.86 clippy update made `indexing_slicing`
# flag ~266 PRODUCTION sites - overwhelmingly bounds-checked wire-parser slicing
# (`buf[a..b]` after an explicit length check) that older clippy proved safe.
# A restriction lint that fires 266 times on reviewed parsers is decorative: it
# buries the genuinely dangerous `unwrap_used` signal it was meant to sit beside,
# and it made a "lives at stake" CI gate red on every push. `integer_division`
# and `float_arithmetic` are numeric-style lints, not memory-safety, and add pure
# noise. The bounds-safety intent is now carried by (a) `unwrap_used` +
# `panic_in_result_fn` (kept strict), and (b) coverage-guided FUZZING of the wire
# parsers (circuit cell / mux frame / transport headers) - which actually FINDS
# the out-of-bounds bugs this lint only gestures at. Re-enable per-crate on any
# module where you want the stricter posture and have paid down the false hits.
indexing_slicing = "allow"
integer_division = "allow"
float_arithmetic = "allow"

[workspace.dependencies]
# Crypto primitives - all from audited upstream crates. No hand-rolled crypto.
# These are non-negotiables.
#
# VERSIONS ARE EXACT-PINNED.
# Roadmap R14/R18: test vectors in `tests/vectors.rs` are sensitive to
# upstream primitive byte-level output. A `2` -> `2.1` bump (let alone
# `2` -> `3`) can silently change outputs. Every crypto-adjacent crate is
# pinned to the exact patch version.
snow = "=0.9.6"
ml-kem = { version = "=0.3.0-rc.0", features = ["getrandom", "zeroize"] }
ed25519-dalek = { version = "=2.2.0", features = ["rand_core", "zeroize"] }
x25519-dalek = { version = "=2.0.1", features = ["static_secrets", "zeroize"] }
# Ristretto prime-order group for the designated-verifier OR-proof (receipt-free
# invite vouching). Pinned to the SAME version ed25519-dalek/x25519-dalek already
# pull in transitively, so this adds no new crate to the supply chain - it only
# exposes the group ops as a direct dependency.
curve25519-dalek = { version = "=4.1.3", features = ["zeroize"] }
blake3 = "=1.8.4"
sha1 = "0.10"
chacha20poly1305 = "=0.10.1"
aes-gcm = "=0.10.3"
hkdf = "=0.12.4"
sha2 = "=0.10.9"
rand = "=0.9.2"
rand_core = "=0.9.5"
zeroize = { version = "=1.8.2", features = ["zeroize_derive"] }
subtle = "=2.6.1"

# Process hardening (RLIMIT_CORE). Safe wrapper around getrlimit/setrlimit
# so we can honor workspace `#![forbid(unsafe_code)]`.
rlimit = "=0.11.0"

# Nostr (discovery channel adapter).
k256 = { version = "=0.13.4", features = ["schnorr"] }
base64 = "=0.22.1"
bytes = "1"
hex = "=0.4.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# TUN VPN layer (mirage-tun): userspace IP stack + OS TUN device. smoltcp
# terminates TCP/UDP flows from raw IP packets (pure-Rust, our usage is safe);
# the `tun` crate is the OS /dev/net/tun wrapper (its ioctl unsafe is
# encapsulated in the dep, keeping our crates `#![forbid(unsafe_code)]`).
smoltcp = { version = "0.12", default-features = false, features = [
    "std",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
] }
tun = { version = "0.7", features = ["async"] }
async-trait = "=0.1.83"
tokio-tungstenite = { version = "=0.29.0", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
rustls = { version = "=0.23.39", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = { version = "=0.26", default-features = false, features = ["tls12", "ring"] }
rustls-pki-types = "=1"
quinn = "0.11"
rcgen = "0.13"
url = "=2.5.4"
uuid = { version = "1", features = ["v4"] }

# Error handling & logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.128"

# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

# Testing
proptest = "1"

# Internal
mirage-common = { path = "crates/common" }
mirage-spec = { path = "crates/spec" }
mirage-crypto = { path = "crates/crypto" }
mirage-time = { path = "crates/time" }
mirage-circuit = { path = "crates/circuit" }
mirage-core = { path = "crates/core" }
mirage-migration = { path = "crates/migration" }
mirage-mux = { path = "crates/mux" }
mirage-onion = { path = "crates/onion" }
mirage-router = { path = "crates/router" }
mirage-runtime = { path = "crates/runtime" }
mirage-session = { path = "crates/session" }
mirage-discovery = { path = "crates/discovery" }
mirage-discovery-nostr = { path = "crates/discovery-nostr" }
mirage-discovery-dht = { path = "crates/discovery-dht" }
mirage-discovery-dns-txt = { path = "crates/discovery-dns-txt" }
mirage-transport = { path = "crates/transport" }
mirage-transport-masque = { path = "crates/transport-masque" }
mirage-quic-obfs = { path = "crates/quic-obfs" }
mirage-transport-obfs = { path = "crates/transport-obfs" }
mirage-transport-reality = { path = "crates/transport-reality" }
mirage-transport-webrtc = { path = "crates/transport-webrtc" }
mirage-transport-shadowsocks = { path = "crates/transport-shadowsocks" }
mirage-transport-ws = { path = "crates/transport-ws" }
mirage-transport-meek = { path = "crates/transport-meek" }
mirage-transport-hysteria2 = { path = "crates/transport-hysteria2" }
mirage-transport-vless = { path = "crates/transport-vless" }
mirage-transport-doh = { path = "crates/transport-doh" }
mirage-transport-dnstt = { path = "crates/transport-dnstt" }
mirage-transport-pad = { path = "crates/transport-pad" }
mirage-transport-mux = { path = "crates/transport-mux" }
mirage-bridge = { path = "crates/bridge" }
mirage-client = { path = "crates/client" }
mirage-socks5 = { path = "crates/socks5" }
mirage-tun = { path = "crates/tun" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# panic = "unwind" (the default).
# SECURITY: we MUST run Drop on panic so Zeroizing<T> wrappers actually zero
# session keys, ML-KEM shared secrets, and ratchet roots. `panic = "abort"`
# would skip Drop and leave live key material in freed memory at the moment
# an adversary is most likely to seize the machine.
# Cost: ~5-10% binary size increase for landing pads + unwinding metadata.
panic = "unwind"

[patch.crates-io]
# Vendored + fingerprint-patched WebRTC DTLS stack (browser-aligned ClientHello).
# The upstream extension order + curve list are hardcoded (not exposed by the
# webrtc-rs API), so aligning the DTLS ClientHello to a real browser requires
# patching webrtc-dtls directly. See third_party/webrtc-dtls/FINGERPRINT.md.
webrtc-dtls = { path = "third_party/webrtc-dtls" }
