[package]
name = "mirage-discovery-dns-txt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Signed DNS TXT record discovery channel for Mirage (A35 follow-up; v0.3 roadmap item brought forward)"

[dependencies]
mirage-common = { workspace = true }
mirage-spec = { workspace = true }
mirage-discovery = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

# Real DNS I/O. Always compiled: `HickoryDnsTxtResolver` is a `DnsTxtResolver`
# backed by the system resolver (or Google/Cloudflare as a configurable
# fallback). Mirage ships one build with every capability present; which
# resolver is used is a RUNTIME config choice, never a cargo feature.
hickory-resolver = { version = ">=0.24, <0.26", default-features = false, features = ["tokio-runtime", "system-config"] }

[dev-dependencies]
getrandom = "0.3"
hex = "=0.4.3"
proptest = { workspace = true }

[lints]
workspace = true
