[package]
name = "mirage-discovery-nostr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Nostr channel adapter for the Mirage discovery layer (spec §03 §8.1)"

[dependencies]
mirage-common = { workspace = true }
mirage-spec = { workspace = true }
mirage-discovery = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
# BIP-340 Schnorr over secp256k1, matching Nostr NIP-01.
k256 = { workspace = true }
sha2 = { workspace = true }
# NIP-01 wire format is JSON.
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
getrandom = "0.3"

# Network I/O: the WebSocket-based `DiscoveryChannel` that talks to real Nostr
# relays. Always compiled - the protocol layer above stays I/O-free by design,
# but the shipped build always CONTAINS the relay client; whether it is used is
# a RUNTIME config choice, never a cargo feature.
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
