[package]
name = "mirage-socks5"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Minimal RFC 1928 SOCKS5 server (CONNECT, NO-AUTH) for Mirage bridges"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
