[package]
name = "mirage-time"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hardened time-source for Mirage clients (multi-source consensus, clock-skew detection)"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
# The reference HTTPS-`Date` time source, on the workspace's tokio-rustls stack
# (no reqwest/hyper). Always compiled: Mirage ships one build with every
# capability present, selected at RUNTIME by config - never by a cargo feature.
tokio = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = "=0.26.11"

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
