[package]
name = "mirage-transport-doh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "DoH-tunnel transport for Mirage - meek-style HTTP long-polling with DNS-over-HTTPS mimicry headers"

[dependencies]
mirage-transport = { workspace = true }
mirage-transport-meek = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
getrandom = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
